# qtserverclient

./: CMakeLists.txt  LICENSE  README.md
socketclient/: main.cpp  socketclient.cpp  socketclient.h
socketserver/: main.cpp  socketserver.cpp  socketserver.h
